--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-scripts",
+  "name": "react-scripts-sass",
   "version": "1.1.0",
-  "description": "Configuration and scripts for Create React App.",
+  "description": "SASS compatibility for Facebook react-scripts",
   "repository": "facebookincubator/create-react-app",
   "license": "MIT",
   "engines": {
@@ -51,6 +51,7 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react-dev-utils": "^5.0.0",
+    "sass-loader": "^6.0.6",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
